# magicformula

./: .gitignore  .pre-commit-config.yaml  CSV_INPUT_GUIDE.md  Makefile  README.md  check_packages.py  environment-dev.yml  environment.yml  indicators_get.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample_response_av.json  sample_response_finviz.json  setup.py  symbols.json
.claude/: settings.local.json
config/: settings_pydantic.py
data/: symbols.json
scripts/: merge_strategy_results.py  run_analysis.py
src/: __init__.py
src/calculations/: __init__.py  exceptions.py  financial_metrics.py  ranking.py
src/data/: __init__.py  cache.py  csv_reader.py  quality.py  types.py  validators.py
src/data/fetchers/: __init__.py  alphavantage_fetcher.py  async_fetcher.py  base_fetcher.py  fetcher_utils.py  yfinance_fetcher.py
src/data/models/: __init__.py  ticker_data.py  ticker_status.py
src/output/: __init__.py  csv_writer.py  json_writer.py
src/strategies/: __init__.py  acquirers_multiple.py  base_strategy.py  dca.py  magic_formula.py
src/utils/: __init__.py  date_utils.py  decorators.py  logging_config.py
tests/: __init__.py  conftest.py
tests/integration/: test_data_fetchers.py  test_end_to_end.py
tests/unit/: test_cache.py  test_data_quality.py  test_dca.py  test_financial_metrics.py  test_ranking.py  test_strategies.py
